<resources>
    <string name="app_name">Goal Manager</string>
    <string name="str_header">Goals</string>
    <string name="txt_long_header">Long Term Goals</string>
    <string name="txt_short_header">Short Term Goals</string>
    <string name="txt_daily_header">Everyday Task</string>
    <string name="str_add_goal">Add Goal</string>
    <string name="str_goal">Goal</string>
    <string name="txt_long">Long Term</string>
    <string name="txt_short">Short Term</string>
    <string name="txt_daily">Daily</string>
    <string name="str_type">Goal Type</string>
    <string name="str_priority">Priority</string>
    <string name="txt_low">Low</string>
    <string name="txt_medium">Medium</string>
    <string name="txt_high">High</string>
    <string name="str_save">Save</string>
    <string name="txt_no_long_goals">No Long Terms Goals to Achieve</string>
    <string name="txt_no_short_goals">No Short Term Goals To Achieve</string>
    <string name="txt_no_daily_goals">No Daily Goals To Achieve</string>
    <string name="str_set_complete">Double Tap Goal To Set As Completed</string>
    <string name="appwidget_text">No goals to achieve</string>
    <string name="add_widget">Add widget</string>
    <string name="one_month">One Month</string>
    <string name="three_months">Three Months</string>
    <string name="six_months">Six Months</string>
    <string name="one_year">One Year</string>
    <string name="five_year">Five Years</string>
    <string name="ten_year">Ten Years</string>
    <string name="lifetime">Lifetime</string>
    <string name="str_time">Time to complete</string>
    <string name="text_long">Long</string>
    <string name="text_short">Short</string>
    <string name="text_daily">Daily</string>
    <string name="txt_what_to_do">What to do now?</string>
    <string name="txt_doing">Doing It Now</string>
    <string name="txt_later">Will Do Later</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_goals">Goals</string>
    <string name="title_task">Task</string>
    <string name="title_user">User</string>
    <string name="str_task_header">Task</string>
    <string name="title_study">Study</string>
    <string name="txt_start_study">Start Study</string>
    <string name="txt_start_timer">Start Timer</string>
    <string name="txt_add_component">Add</string>
    <string name="txt_title">Title</string>
    <string name="txt_para">Paragraph</string>
    <string name="txt_image">Image</string>
    <string name="txt_list">List</string>
    <string name="txt_quote">Quote</string>
    <string name="txt_save">Save</string>

</resources>
