<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitie.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_header"
                android:textColor="@color/colorPrimary"
                android:textSize="32dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAddGoals"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/tvHeader"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/iv_add_back"
                android:onClick="addGoals"
                android:padding="5dp"
                android:src="@drawable/ic_add" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardLongTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHeader"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLongTermGoalHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/txt_long_header"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvLongTermGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLongTermGoalHeader" />

                    <TextView
                        android:id="@+id/tvNoLongGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLongTermGoalHeader"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/txt_no_long_goals"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardShortTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardLongTerm"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvShortTermGoalHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/txt_short_header"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvShortTermGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvShortTermGoalHeader"/>

                    <TextView
                        android:id="@+id/tvNoShortGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvShortTermGoalHeader"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/txt_no_short_goals"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardShortTerm"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvDailyGoalHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/txt_daily_header"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDailyGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvDailyGoalHeader" />

                    <TextView
                        android:id="@+id/tvNoDailyGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvDailyGoalHeader"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/txt_no_daily_goals"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>