<?xml version="1.0" encoding="utf-8"?>

<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="70dp"
        tools:context=".activitie.home.dashboard.TaskFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:id="@+id/taskLayout"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">


                <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_task_header"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivAddGoals"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/tvHeader"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/iv_add_back"
                    android:padding="5dp"
                    android:src="@drawable/ic_add" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvHeader"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/tvDailyGoalHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:padding="10dp"
                            android:text="@string/txt_daily_header"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDailyGoals"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvDailyGoalHeader" />

                        <TextView
                            android:id="@+id/tvNoDailyGoals"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvDailyGoalHeader"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/txt_no_daily_goals"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnWhatToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardDaily"
                    android:background="@drawable/btn_back"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/txt_what_to_do"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            android:id="@+id/randonTaskLayout"
            tools:context=".activitie.RandomTask">



            <Button
                android:id="@+id/btnStart"
                android:text="Start"
                android:textAllCaps="false"
                android:textSize="30dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/btn_back_circle"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextSwitcher
                android:id="@+id/textSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <LinearLayout
                android:id="@+id/decisionLinear"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_margin="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btn_doing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/txt_doing"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:onClick="willDoNow"
                    android:textStyle="bold" />


                <Button
                    android:gravity="center"
                    android:id="@+id/btn_later"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:padding="10dp"
                    android:onClick="willDoLater"
                    android:text="@string/txt_later"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>
